--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "inquirer": "^9.2.14",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2"
   }
 }
